# hydroponics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.default  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig_esp32  sdkconfig_esp32s2  sdkconfig_esp32s2.old  sdkconfig_esp32s3
.run/: Flash & Monitor.run.xml  Flash and Run.run.xml  Generate Protos.run.xml  Monitor.run.xml  Push Config (Prod).run.xml  Push Config (Test).run.xml  Set Target (ESP32).run.xml  Set Target (ESP32-S2).run.xml  Write NVS (GreenMeanMachine).run.xml  Write NVS (RedMeanMachine).run.xml  Write NVS.run.xml  protos.run.xml
cloud/: .gitignore
cloud/bq/: schema.json
cloud/functions/bigquery/: bigquery.go  go.sum
cloud/functions/firestore/: firestore.go  go.sum
cloud/functions/pubsub/: go.sum  pubsub.go
components/: esp32-lcd-common
components/bme280/: CMakeLists.txt
components/esp-tuya/: tuya.c  tuya.h
components/hydroponics-context/: CMakeLists.txt  Kconfig.projbuild  context.c  context.h
components/hydroponics-cron/: CMakeLists.txt  cron.c
components/hydroponics-error/: CMakeLists.txt  error.c  error.h
components/hydroponics-lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_driver.h
components/hydroponics-lcd-dev-rm68090/: CMakeLists.txt  rm68090.c  rm68090.h  rm68090_regs.h  ucg_rm68090_hal.c  ucg_rm68090_hal.h
components/hydroponics-lcd-dev-st7796s/: CMakeLists.txt  Kconfig  lcd_dev.h  st7796s.c  st7796s.h  st7796s_regs.h
components/hydroponics-lcd-direct/: CMakeLists.txt  lcd_direct.c
components/hydroponics-lcd-i2s/: CMakeLists.txt  lcd_i2s.c
components/hydroponics-lcd-i2s-parallel/: CMakeLists.txt  lcd_i2s_parallel.c
components/hydroponics-lcd-spi/: CMakeLists.txt  Kconfig  lcd_spi.c  lcd_spi.h
components/hydroponics-lcd-ucglib/: CMakeLists.txt  lcd_ucg_hal.c  lcd_ucg_hal.h
components/hydroponics-utils/: CMakeLists.txt  buffer.c  buffer.h  i2c.c  i2c.h  utils.c  utils.h
components/i2s_parallel/: CMakeLists.txt  i2s_parallel.c
components/i2s_parallel/include/: i2s_parallel.h
components/protos/: CMakeLists.txt  Commands.pb  Commands.textproto  GreenMeanMachine.pb  GreenMeanMachine.textproto  RedMeanMachine.pb  RedMeanMachine.textproto  commands.pb-c.c  commands.pb-c.h  commands.pb.go  commands.proto  config.pb-c.c  config.pb-c.h  config.pb.go  config.proto  state.pb-c.c  state.pb-c.h  state.pb.go  state.proto
components/protos/commands/: Mixer_A_Off.pb  Mixer_A_On.pb  Mixer_A_On_60s.pb  Mixer_B_Off.pb  Mixer_B_On.pb  Mixer_B_On_60s.pb  Nutrients_10s.pb  Nutrients_5s.pb  Ph_Down_1s.pb  Ph_Down_3s.pb  Ph_Up_1s.pb  Water_A_Off.pb  Water_A_On.pb  Water_A_On_10s.pb  Water_A_On_60s.pb  Water_B_Off.pb  Water_B_On.pb  Water_B_On_10s.pb  Water_B_On_20s.pb  Water_B_On_60s.pb  Water_On_20s.pb
components/protos/go/: commands.pb.go  config.pb.go  state.pb.go
main/: CMakeLists.txt  Kconfig.projbuild  buses.c  buses.h  config.c  config.h  context.c  context.h  embedded.c  embedded.h  error.h  main.c  simulation.h  storage.c  storage.h  utils.c  utils.h
main/certs/: ec_public.pem
main/config/: CMakeLists.txt  GreenMeanMachine.pb  GreenMeanMachine.textproto  config.pb-c.c  config.pb-c.h  config.proto
main/console/: cmd_ezo.c  cmd_ezo.h  console.c  console.h
main/display/: display.c  display.h  ext_display.c  ext_display.h  lcd.c  lcd.h  rm68090.c  rm68090.h  rm68090_regs.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
main/display/screens/: ext_main.c  ext_main.h
main/driver/: ext_gpio.c  ext_gpio.h  ezo.c  ezo.h  ezo_hw.c  ezo_sim.c  gpio_debounce.c  gpio_debounce.h  i2s_lcd8.c  i2s_lcd8.h  rotary.c  rotary.h  status.c  status.h  storage.c  storage.h
main/driver/lcd/: direct.c  direct.h  i2s.c  i2s.h  i2s_p.c  i2s_p.h  lcd.c  lcd.h  rm68090.c  rm68090.h  rm68090_regs.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h  ucg_rm68090_hal.c  ucg_rm68090_hal.h
main/drivers/: ezo.c  ezo.h  ezo_ec.c  ezo_ec.h
main/embed/: README.md
main/filter/: moving_average.c  moving_average.h
main/network/: iot.c  iot.h  mqtt.c  mqtt.h  ntp.c  ntp.h  state.c  state.h  syslog.c  syslog.h  wifi.c  wifi.h
main/sensors/: ds18b20_ids.txt  ezo_ec.c  ezo_ec.h  ezo_ph.c  ezo_ph.h  ezo_rtd.c  ezo_rtd.h  humidity_pressure.c  humidity_pressure.h  humidity_pressure_hw.c  humidity_pressure_sim.c  tank.c  tank.h  temperature.c  temperature.h  temperature_hw.c  temperature_sim.c
main/tasks/: cron.c  cron.h  io.c  io.h  monitor.c  monitor.h  tuya_io.c  tuya_io.h
openocd/: board.cfg  esp32s2-saola.cfg  interface.cfg
tools/: custom_idf.sh  idf_esp32.sh  idf_esp32s2.sh  idf_esp32s3.sh  push.sh  write_nvs.sh
